I kept the menu underline highlighted when visiting any page from that category. I adjusted the menu dropdown to accomodate full single lines of text. I added social media icons. I matched the font-weight of project titles/subtitles (regular). I changed the header from fixed to absolute (to show full images better). I fixed an issue with all-portrait-image projects having no top margin for their description. I made project names left justified. I added an "X" to the mobile menu when it's toggled. I de-selected the "About" menu on mobile. Various other style fixes.

--- a/responsive.css
+++ b/responsive.css
@@ -73,7 +73,10 @@ and (max-width : 800px){
        padding-left: 2%;
     }
 
-    #mobile-menu-wrapper,
+    #mobile-menu-wrapper {
+        margin-left: 19px;
+        margin-bottom: 20px;
+    }
     #logo {
         margin-left: 19px;
     }
@@ -138,8 +141,9 @@ and (max-width : 800px){
 
 
     #main-content .inner {
-        margin-left: 2%;
+        margin-left: 2% !important;
         margin-right: 2%;
+        width: 82% !important;
     }
 
     .page-template-page-awardspress .page-content,
@@ -168,7 +172,7 @@ and (max-width : 800px){
 
     .single-smprojectentity #main-content .inner,
     #main-content .inner.fullscreen {
-        margin-left: 0;
+        margin-left: 0 !important;
         margin-right: 0;
     }
 
@@ -176,7 +180,7 @@ and (max-width : 800px){
     .page-template-page-team .large-grid,
     .large-grid {
         margin-right:0;
-        margin-left:0;
+        margin-left:15px;
     }
 
     .large-grid .project-teaser:nth-of-type(5n+0),
@@ -275,11 +279,13 @@ and (max-width : 400px) {
     #mobile-menu-menu-container #menu-about-sub-menu{
         border-top: 1px solid #666;
         padding-top: 20px;
+        margin-top: 0px;
     }
 
 
     header {
         min-height: 84px;
+        position: fixed;
     }
 
 
