--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ img {
     width:30.5%;
     float:left;
     margin:1.2%;
-    margin-bottom: -10px;
+    margin-bottom: -40px;
 }
 
 /*.large-grid .project-teaser:nth-of-type(5n+0){
@@ -128,6 +128,7 @@ img {
     text-align: right;
     margin-top: 25px;
     clear: right;
+    margin-right: 170px;
 }
 
 #current-page-name,
@@ -139,6 +140,7 @@ img {
     font-family: "Segoe UI Light";
     text-transform: uppercase;
     font-size: 18px;
+    margin-top:6px;
 }
 
 .page-template-page-portfolio #current-page-name {
@@ -272,6 +274,11 @@ header nav .sub-nav a:hover,
 .mobile-menu .current-menu-item a:visited,
 header nav .current-menu-item a:link,
 header nav .current-menu-item a:visited{
+    /*color: #48B9C7;*/
+    color: #666;
+}
+
+header nav .sub-nav .current-menu-item a:link {
     color: #666;
 }
 
@@ -324,12 +331,12 @@ header nav .menu .layer-menu li {
 header {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 1.0);
     left: 0;
-    /* min-height: 125px; */
-    min-height: 97px;
-    position: fixed;
+    min-height: 100px;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: 2500;
+    margin-bottom: 0px;
 }
 
 
@@ -381,11 +388,11 @@ and (max-width : 600px) {
 .single-project-title {
     color: #727272;
     padding:20px;
-    font-family:"Segoe UI Semi-Bold";
+    font-family:"Segoe UI";
     font-size:24px;
     text-align: left;
     margin-left:24px;
-    margin-top:-24px;
+    margin-top:-40px;
 }
 .single-project-subtitle {
     color: #727272;
@@ -394,7 +401,7 @@ and (max-width : 600px) {
     font-size:20px;
     text-align: left;
     margin-left:24px;
-    margin-top:-24px;
+    margin-top:-34px;
 }
 
 .large-master-type h2 {
@@ -655,8 +662,8 @@ and (max-width : 600px) {
     text-transform: uppercase;
     font-family: "Segoe UI Light";
     font-size: 18px;
-    padding-top:25px;
-    text-align:center;
+    padding-top:10px;
+    text-align:left;
     min-height: 60px;
 }
 
@@ -733,13 +740,15 @@ body.page-template-page-portfolio {
 .layer-menu,
 .project-category-menu {
     display:none;
-    padding-top: 5px;
-
+    margin-top: -30px;
+    width: 245px;
+    margin-left: -6px;
+    padding-top: 10px;
 }
 
 #layer-menu-target-2 .layer-menu,
 #layer-menu-target .layer-menu {
-    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.85);
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 1);
 }
 
 .page-id-36  .page-content,
@@ -810,7 +819,6 @@ body.page-template-page-portfolio {
 .project-nav a:link,
 .project-nav a:visited {
     color: #fff;
-
 }
 
 .project-nav .left-field {
@@ -889,7 +897,7 @@ body.page-template-page-portfolio {
 }
 
 .large-grid {
-    padding-top: 125px;
+    padding-top: 100px;
     padding-left: 0;
     padding-right: 0;
 }
@@ -1066,4 +1074,22 @@ Chris Aitken edits
 
 .projectRow {
     margin-left:30px;
+}
+
+#socialMedia {
+    position:absolute;right:50px;top:37px;
+}
+
+.fa {
+    font-size:24px !important;color:#AAAAAA;text-decoration:none;width:30px;
+}
+
+@media only screen
+and (max-width : 800px){
+    #socialMedia {
+        display:none;
+    }
+    .fa {
+        font-size:20px;
+    }
 }
